tests/jtrrouter/errors/default_arrivallane_false/errors.jtrrouter
Error: Invalid arrivalLane definition for option 'arrivallane';
 must be one of ("current", or an int>=0)
Quitting (on error).
